--- a/README.org
+++ b/README.org
@@ -5,6 +5,9 @@ Clone Orgmode headings so they appear in multiple locations, and sync edits betw
 * Why clones?
 Anyone who has made an outline has run into the problem that an entry belongs in two places. For example:
 
+#+NAME: demo
+#+ATTR_ORG: :width 200
+#+ATTR_HTML: :width 200
 [[file:IMAGES/output-2020-09-01-15:15:40.gif]]
 
 
