--- a/README.org
+++ b/README.org
@@ -24,8 +24,6 @@ My use case is that I maintain one org file with ongoing research. This file is 
 
 I do not use [[https://www.orgroam.com/][org-roam]] or any other package involving the Zettlekasten, or other, note taking method. My brain is simple. I like outlines and only outlines. Anything beyond a simple outline results in diministed productivity.
 
-See below for links to other transclusion solutions.
-
 * Terminology
 I use the following teminology in the package:
 
@@ -35,14 +33,14 @@ I use the following teminology in the package:
 
 * Basics
 1. Only the headline and body of a node are cloned.
-2. Tags, TODO states, priorities, planning lines, property drawers, logbooks, and closing note logs, are not cloned and remain independent.
-3. Children of clones are not cloned. Only the node itself is cloned. If you want the children to be cloned, you must clone them separately. 
-4. Clones can be reordered, promoted, demoted, and appear anywhere in an org outline or in a different org file (assuming org-id can find it). 
+2. Tags, TODO states, priorities, planning lines, property drawers, logbooks, and closing note logs, are not cloned and remain independent. You can change these properties on an individual basis without affecting any clones. 
+3. Child nodes of clones are not cloned. Only the node itself is cloned. If you want the children to be cloned, you must clone them separately. 
+4. Clones can be reordered, promoted, demoted, and appear anywhere in an org outline or in a different org file. All that matters is that =org-id= can find it.
 
 * Installation
 There are no outside dependencies. Place =org-clones.el= in your load path and =(require 'org-clones)=. You can then activate =(org-clones-mode)=. If you create a clone without turning on the mode first, =org-clones-mode= will be enabled automatically. 
 
-In the alternative, use this use-package declaration which includes all customizable variables, commands, faces, and my own keymap, which you can easily customize:
+In the alternative, this use-package declaration includes all customizable variables, commands, faces, and my own keymap, which you can easily customize:
 #+begin_src emacs-lisp :results silent
   (use-package org-clones
     :hook
@@ -77,10 +75,13 @@ In the alternative, use this use-package declaration which includes all customiz
 Put the cursor on the node you want to clone. There are two methods of creating a clone:
 1. Run =org-clones-create-clone=, which will prompt the user to select a master node with =(org-goto)= and create a new heading at point.
 2. Run =org-clones-store-marker=, then place the point at a new location (which can be a different org file) and run =org-clones-create-clone-from-marker=.
+3. =org-clones-create-clone-dwim= creates a clone from a stored marker if there is one, and otherwise prompts the user for the source.
 ** Display 
-Clones are marked by placing an icon in front of the clone’s headline. This icon can be customized by changing =org-clones-clone-prefix-icon=
+Clones are marked by placing an icon in front of the clone’s headline. This icon can be customized by changing =org-clones-clone-prefix-icon=. The headline and body of a cloned node receive the =org-clones-clone= face. 
+
+When the cursor moves into the headline or body of a cloned node, an overlay is applied which includes the face =org-clones-current-clone=. At that point, the text in that field becomes read-only, and the user must press =C-c C-c= to begin to edit the clone. (=C-c C-c= continues to work in the usual orgmode way so long as the cursor is not inside a headline field.)
 ** Viewing clones
-To cycle through clones of the current node, run =org-clones-jump-to-clones=. Then, press =n= to jump from one clone to another. Exit with =C-g= or any other key. 
+To cycle through clones of the current node, run =org-clones-jump-to-clones=. Then, press =n= to jump from one clone to another in a loop. Exit with =C-g= or any other key. 
 ** Editing clones
 1. When the cursor enters a cloned headline or body, the text becomes read only. To edit the text, type =C-c C-c=.
 2. To complete an edit, type =C-c C-c= again. To discard the edit, type =C-c C-k=.
@@ -93,6 +94,7 @@ If you do not want a clone to be synced, run =org-clones-unclone-this-clone=. Th
 3. =Org-clones= currently relies on =org-id=. =Org-id= sometimes has problems finding the location of an id, especially in a file that has just been created. Before you blame =org-clones= for a clone not syncing, make sure the file you are using appears in =org-id-locations=. Make use of =org-id-update-id-locations= if you must. You can test whether =org-id= is working as it should by manually trying =(org-id-goto "INSERT ID HERE")=. If that does not work, =org-clones= will not work. I find that saving the file and creating a few ids with =(org-id-get-create)= in some dummy headers, and re-saving the file, eventually solves the problem. (I have used =org-id= for years before noticing this issue and only discovered it when testing this package. Perhaps you will not encouter it.)
 4. If =org-clones= cannot find a clone, it does not remove the clone from the clone list automatically (due to the issues with =org-id=, supra).
 * Custom variables, faces, and commands
+Most of this is laid out above, but just in case:
 ** Faces
 | Face                     | Usage                                                                                                     |
 |--------------------------+-----------------------------------------------------------------------------------------------------------|
@@ -107,7 +109,7 @@ If you do not want a clone to be synced, run =org-clones-unclone-this-clone=. Th
 | =org-clones-jump-to-next-clone-shortcut= | Shortcut to cycle to the next clone after running =(org-clones-cycle-through-clones)=                           | "n"                      |
 | =org-clones-clone-prefix-icon=           | Icon which precedes the headline of any cloned node                                                           | "◈ "                     |
 | =org-clones-empty-body-string=           | You're not allowed to have a blank body in a clone. If you clone a node without a body, use this place holder | "[empty clone body]"     |
-| =org-clones-empty-headling-string=       | I don't know why anyone woudl clone a node without a headline, but in case you try, use this place holder     | "[empty clone headline]" |
+| =org-clones-empty-headling-string=       | I don't know why anyone would clone a node without a headline, but in case you try, use this place holder     | "[empty clone headline]" |
 | =org-clones-prompt-before-syncing=       | Do you want an extra warning before syncing clones?                                                           | nil                      |
 | =org-clones-use-popup-prompt=            | If you do want an extra warning, do you want it in the minibuffer (default) or a pop up window?               | nil                      |
 ** Commands
@@ -127,20 +129,7 @@ If you do not want a clone to be synced, run =org-clones-unclone-this-clone=. Th
 - The transient overlay has a keymap which uses =org-clones-start-edit-shortcut=, bound to =C-c C-c= by default. 
 - Once the edit mode is invoked, the read-only text property is removed, the header-line appears to remind the user they are editing a clone and showing the shortcuts to commit or abandon the edit. These shortcuts are set with =org-clones-start-edit-shortcut= (=C-c C-c= by default) and =org-clones-abort-edit-shortcut= (=C-c C-k= by default).  
 - When the user terminates the edit, the read-only text properties are replaced, the header-line is reset to its previous value, and the transient overlay is replaced. Other variables (recording the state of the node before the edit, etc.) are reset to nil). If the user has committed the edit, all other clones are synced automatically.
-- When the cursor exits a cloned field without edits, the transient overlay is removed.
-* TODOs
-- [ ] write conflict check before syncing clones/when starting the mode
-- [ ] figure out why org-id sometimes fails to pick up ids entered into new files, submit a bug report and write a temporary workaround
-- [ ] make an animated gif for example section
-- [X] pick a less offensive face for the current clone
-- [X] pick bindings for org-clones-map 
-- [X] write sample use-package 
-* Known Bugs
-- [X] Error when putting the text properties on a body when the the last point of the body is the last point of the buffer. [Solved by converting the =let= in =org-clones--text-watcher= to a =when-let=.
-- [ ] Clone overlay icon disappears when killing and yanking a clone to a new location. [Can’t figure out how to solve this one simply. Perhaps ignore it.]
-- [X] if a clone is folded when synced, the new body will not be hidden properly until the outline visibility is cycled
-- [X] After an edit, the overlay is not replaced
-
+- When the cursor exits a cloned field without edits, the transient overlay (and its read-only property) is removed.
 * Other transclusion efforts
 Here are other Emacs transclusion efforts (or discussions of such efforts):
 
@@ -150,5 +139,4 @@ https://github.com/justintaft/emacs-transclusion
 
 https://github.com/gregdetre/emacs-freex
 
-* Changelog
-- [2020-09-01 Tue] Added =org-clones-delete-this-clone=
+
