--- a/README.org
+++ b/README.org
@@ -32,9 +32,10 @@ I use the following teminology in the package:
 
 * Basics
 1. Only the headline and body of a node are cloned.
-2. Tags, TODO states, priorities, planning lines, property drawers, logbooks, and closing note logs, are not cloned and remain independent. You can change these properties on an individual basis without affecting any clones. 
-3. Child nodes of clones are not cloned. Only the node itself is cloned. If you want the children to be cloned, you must clone them separately. 
-4. Clones can be reordered, promoted, demoted, and appear anywhere in an org outline or in a different org file. All that matters is that =org-id= can find it.
+2. Tags, TODO states, priorities, planning lines, property drawers, logbooks, and closing note logs, are not cloned and remain independent. You can change these properties on an individual basis without affecting any clones.
+3. Anything in the body of a clone (e.g., text, source blocks, etc.) will be cloned. Only the items listed above aree ignored. 
+4. Child nodes of clones are not cloned. Only the node itself is cloned. If you want the children to be cloned, you must clone them separately. 
+5. Clones can be reordered, promoted, demoted, and appear anywhere in an org outline or in a different org file. All that matters is that =org-id= can find it.
 
 * Installation
 There are no outside dependencies. Place =org-clones.el= in your load path and =(require 'org-clones)=. You can then activate =(org-clones-mode)=. If you create a clone without turning on the mode first, =org-clones-mode= will be enabled automatically. 
@@ -91,6 +92,8 @@ If you do not want a clone to be synced, run =org-clones-unclone-this-clone=. Th
 2. =Org-clones= relies on =cursor-sensor-mode=. I have not profiled to see what type of slowdown one might experience in a large file due to =cursor-sensor-mode=. My files are not large enough for this to be a concern.
 3. =Org-clones= currently relies on =org-id=. =Org-id= sometimes has problems finding the location of an id, especially in a file that has just been created. Before you blame =org-clones= for a clone not syncing, make sure the file you are using appears in =org-id-locations=. Make use of =org-id-update-id-locations= if you must. You can test whether =org-id= is working as it should by manually trying =(org-id-goto "INSERT ID HERE")=. If that does not work, =org-clones= will not work. I find that saving the file and creating a few ids with =(org-id-get-create)= in some dummy headers, and re-saving the file, eventually solves the problem. (I have used =org-id= for years before noticing this issue and only discovered it when testing this package. Perhaps you will not encouter it.)
 4. If =org-clones= cannot find a clone, it does not remove the clone from the clone list automatically (due to the issues with =org-id=, supra, or other issues involving multiple files/computers).
+5. If you try to create a new node while editing the body of a clone, you are asking for trouble. =Org-clones= will be confused, and make a mess of everything. I will figure out a good way to prevent this in the future. For now, don't do it. 
+
 * Custom variables, faces, and commands
 Most of this is laid out above, but just in case:
 ** Faces
