--- a/README.org
+++ b/README.org
@@ -1,4 +1,6 @@
 * Org-clones 
+This package is still being developed and tested. Feedback and bug reports are welcome. Use at your own risk. 
+
 Clone Orgmode headings so they appear in multiple locations, and sync edits between clones.
 
 [[file:IMAGES/output-2020-09-01-15:37:39.gif]]
