--- a/README.org
+++ b/README.org
@@ -142,4 +142,5 @@ https://github.com/justintaft/emacs-transclusion
 
 https://github.com/gregdetre/emacs-freex
 * Change log
+- [2020-09-03 Thu] Add org-capture hook to capture and sync edits to a clone via org-capture
 - [2020-09-02 Wed] Fix progress cookies and unrelated issue concerning org-clones improperly placing the body of a parent node inside a child node when syncing clones
